fix: modal z-index bug

--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -4,7 +4,7 @@
     right: 0;
     left: 0;
     bottom: 0;
-    z-index: 5;
+    z-index: 10;
     background: white;
     display: flex;
     flex-direction: column;
